syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// Conexion specification
message Connection {
    // UUID
    string uuid = 1;

    // Name
    string name = 2;

    // Optional description
    string description = 3;

    // Optional Tags of this entity
    repeated string tags = 4;

    // Optional time when the entityt was created
    google.protobuf.Timestamp created_at = 5;

    // Optional last time the entity was updated
    google.protobuf.Timestamp updated_at = 6;

    // Optional a flag to freeze the store
    bool frozen = 7;

    // Optional a flag to disable the store
    bool disabled = 8;

    // Optional if the entity has been deleted
    bool deleted = 9;

    // Optional the k8s secret to use
    string k8s_secret = 10;

    // Optional kind of the store
    ConnectionKind kind = 11;

    google.protobuf.Struct schema = 12;
}

 // Request data to create/update sonnexion
 message ConnectionBodyRequest {
    // Owner of the namespace
    string owner = 1;

    // Connection body
    Connection connection = 2;
 }


// Contains list connections
message ListConnectionsResponse {
    // Count of the entities
    int32 count = 1;

    // List of all entities
    repeated Connection results = 2;

    // Previous page
    string previous = 3;

    // Next page
    string next = 4;
}


// Connection kinds
enum ConnectionKind {
    host_path = 0;
    volume_claim = 1;
    ftp = 2;
    gcp = 3;
    gcs = 4;
    gcpcloudsql = 5;
    grpc = 6;
    hdfs = 7;
    http = 8;
    pig_cli = 9;
    hive_cli = 10;
    hive_metastore = 11;
    hive_server2 = 12;
    jdbc = 13;
    jenkins = 14;
    mysql = 15;
    postgres = 16;
    oracle = 17;
    vertica = 18;
    sqlite = 19;
    mssql = 20;
    redis = 21;
    presto = 22;
    mongo = 23;
    cassandra = 24;
    samba = 25;
    aws = 26;
    s3 = 27;
    emr = 28;
    snowflake = 29;
    ssh = 30;
    cloudant = 31;
    databricks = 32;
    segment = 33;
    azure_data_lake = 34;
    azure_cosmos = 35;
    wasb = 36;
    registry = 37;
    git = 38;
}
